# Coursera_CPP

./: .gitignore  README.md
Black_Belt/BB_W1_Part_F/: svg.h
Black_Belt/BB_W1_Part_G/: inp.json
Black_Belt/BB_W1_Part_I/: CMakeLists.txt  main.cpp  svg.h
Black_Belt/BB_W3_Part_J/: change_svg_out.py  map_renderer.cpp
Black_Belt/BB_W3_Part_K/: CMakeLists.txt  map_renderer.cpp
Black_Belt/BB_W3_Part_L/: CMakeLists.txt  main.cpp  map_renderer.cpp  svg.h
Black_Belt/BB_W3_Part_M/: CMakeLists.txt  main.cpp
Black_Belt/BB_W4_Part_N/: CMakeLists.txt  main.cpp  svg.h
Black_Belt/BB_W5_Part_O/: main.cpp  map_renderer.cpp  requests.cpp  transport_catalog.cpp
Black_Belt/BB_W5_Part_P/: descriptions.cpp  descriptions.h  main.cpp  map_renderer.cpp  svg.h  transport_catalog.cpp  transport_catalog.h  transport_catalog.proto  transport_router.cpp  transport_router.h  transport_router.proto
Black_Belt/BB_W5_Part_Q/: CMakeLists.txt  descriptions.cpp  descriptions.pb.cc  graph.pb.h  main.cpp  map_renderer.pb.cc  map_renderer.pb.h  svg.pb.h  transport_catalog.pb.cc  transport_catalog.pb.h  transport_router.cpp  transport_router.pb.cc  transport_router.pb.h
Black_Belt/BB_W5_Part_T/: .gitignore  CmakeLists.txt  algorithm.h  companies_index.cpp  companies_index.h  company.cpp  company.h  company.pb.cc  company.pb.h  company.proto  company_query.cpp  company_query.h  datetime.cpp  datetime.h  descriptions.cpp  descriptions.pb.h  graph.h  graph.pb.cc  hash_combine.cpp  hash_combine.h  (+29 more)
Brown_Belt/: README.md
Red_Belt/: README.md
White_Belt/: README.md
Yellow_Belt/: README.md
(+64 files in other folders)
